# prelude-correlator

./: .gitignore  AUTHORS  ChangeLog  HACKING.README  INSTALL  MANIFEST.in  Makefile.am  NEWS  README  autogen.sh  configure.in  ez_setup.py  prelude-correlator.conf  prelude-correlator.conf.in  setup.cfg  setup.py
PreludeCorrelator/: __init__.py  config.py  context.py  download.py  idmef.py  log.py  main.py  pluginmanager.py  plugins.py  require.py  utils.py
PreludeCorrelator/plugins/: bruteforce.py  businesshour.py  dshield.py  firewall.py  opensshauth.py  scan.py  spamhausdrop.py  worm.py
data/conf.d/: README
debian/: README.Debian  changelog  control  copyright  dirs  prelude-correlator.default  prelude-correlator.examples  prelude-correlator.init  prelude-correlator.install  prelude-correlator.postinst  prelude-correlator.postrm  rules  watch
docs/sample-plugin/: setup.py
docs/sample-plugin/myplugin/: __init__.py  main.py
libmissing/: Makefile.am  sys_time_.h
libmissing/m4/: gnulib-cache.m4  gnulib-comp.m4
pkg/: Makefile
pkg/rhel6/: prelude-correlator.init  prelude-correlator.spec
plugins/: Makefile.am
plugins/lua/: Makefile.am  lib.lua  lua-idmef-value.c  lua-idmef-value.h  lua-idmef.c  lua-idmef.h  lua-timer.c  lua-timer.h  lua.c  regex.c  regex.h
plugins/lua/ruleset/: Makefile.am  brute-force.lua  business-hour.lua  dshield.lua  firewall.lua  openssh-multiple-authtypes.lua  scan.lua  worm.lua
plugins/pcre/: Makefile.am  capture-string.c  capture-string.h  context-save-restore.c  context-save-restore.h  pcre-context.c  pcre-context.h  pcre-mod.c  pcre-mod.h  pcre-parser.c  pcre-parser.h  rule-object.c  rule-object.h  rule-regex.c  rule-regex.h  value-container.c  value-container.h
plugins/pcre/ruleset/: Makefile.am  brute-force.rules  business-hour.rules  example.rules  firewall.rules  pcre.rules  scan.rules  worm.rules
prelude_correlator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
preludecorrelator/: __init__.py  config.py  context.py  download.py  error.py  idmef.py  log.py  main.py  pluginmanager.py  require.py  rule.py  utils.py
preludecorrelator/plugins/: bruteforce.py  businesshour.py  dshield.py  firewall.py  opensshauth.py  scan.py  spamhausdrop.py  worm.py
pycor/: context.py  idmef.py  plugins.py  utils.py
rules/: BruteForcePlugin.py  BusinessHourPlugin.py  CIArmyPlugin.py  DshieldPlugin.py  EventScanPlugin.py  EventStormPlugin.py  EventSweepPlugin.py  FirewallPlugin.py  OpenSSHAuthPlugin.py  SpamhausDropPlugin.py  WormPlugin.py
ruleset/: brute-force.py  business-hour.py  dshield.py  firewall.py  openssh-multiple-authtypes.py  scan.py  worm.py
scripts/: prelude-correlator  pycor
selinux/: Makefile  prelude-correlator.fc  prelude-correlator.if  prelude-correlator.te
src/: Makefile.am  correlation-plugins.c  prelude-correlator.c
src/include/: Makefile.am  correlation-plugins.h  prelude-correlator.h
unittests/: pcorr_debug_mode_test.py
