dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_PREREQ(2.59)
AC_CANONICAL_TARGET([])
AM_INIT_AUTOMAKE(prelude-correlator, 0.9.0)
AM_CONFIG_HEADER(config.h)
AM_DISABLE_STATIC

AM_MAINTAINER_MODE


dnl Checks for programs.
AC_LANG(C)
AC_PROG_CPP
AC_PROG_CC
gl_EARLY


AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_C_INLINE
AC_C_BIGENDIAN
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL

if test "x$prefix" = "xNONE"; then
   prefix="/usr/local"
fi

if test "x$localstatedir" = "x\${prefix}/var"; then
   localstatedir="$prefix/var"
fi

if test "x$sysconfdir" = "x\${prefix}/etc"; then
   sysconfdir="$prefix/etc"
fi

dnl **************************************************
dnl * Check for missing function replacement         *
dnl **************************************************
gl_SOURCE_BASE(libmissing)
gl_M4_BASE(libmissing/m4)
gl_INIT


dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UID_T
AC_HEADER_TIME

dnl **************************************************
dnl * Check for libprelude                           *
dnl **************************************************

AM_PATH_LIBPRELUDE(0.9.15.2, libprelude=yes, libprelude=no)
if test x$libprelude != xyes; then
	AC_MSG_ERROR(libprelude is required in order to build prelude-correlator.)
fi


dnl **************************************************
dnl * Check for PCRE                                 *
dnl **************************************************

AC_PATH_PROG(PCRE_CONFIG, pcre-config, no)

if test x$PCRE_CONFIG = xno; then
   AC_MSG_ERROR(PCRE 4.1 or higher is required to build Prelude-LML. Get it from http://www.pcre.org .)
fi

PCRE_LIBS=`$PCRE_CONFIG --libs`
PCRE_CFLAGS=`$PCRE_CONFIG --cflags`

LIBS_bkp=$LIBS
LIBS="$LIBS $PCRE_LIBS"

CPPFLAGS_bkp=$CPPFLAGS
CPPFLAGS="$CPPFLAGS $PCRE_CFLAGS"

AC_CHECK_LIB(pcre, pcre_get_named_substring, , 
 AC_MSG_ERROR(PCRE 4.1 or higher is required to build Prelude-LML. Get it from http://www.pcre.org .)
)

LIBS=$LIBS_bkp
CPPFLAGS=$CPPFLAGS_bkp

AC_SUBST(PCRE_LIBS)
AC_SUBST(PCRE_CFLAGS)

PRELUDE_CORRELATOR_CONFIG_PREFIX=$prefix/etc/prelude-correlator
AC_SUBST(PRELUDE_CORRELATOR_CONFIG_PREFIX)

CORRELATION_PLUGIN_DIR=$prefix/lib/prelude-correlator
AC_SUBST(CORRELATION_PLUGIN_DIR)


dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_UID_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_TYPE_SIGNAL


configdir=$sysconfdir/prelude-correlator
prelude_correlator_conf=$configdir/prelude-correlator.conf
prelude_correlator_context_dir=$localstatedir/lib/prelude-correlator

AC_SUBST(configdir)
AC_SUBST(prelude_correlator_context_dir)
AC_DEFINE_UNQUOTED(PRELUDE_CORRELATOR_CONF, "$prelude_correlator_conf", Path to Prelude-Correlator configuration file)
AC_DEFINE_UNQUOTED(PRELUDE_CORRELATOR_CONTEXT_DIR, "$prelude_correlator_context_dir", Path to Prelude-Correlator runtime file)

AX_CFLAGS_GCC_OPTION(-Wall)
AX_CFLAGS_GCC_OPTION(-Wstrict-prototypes)
AX_CFLAGS_GCC_OPTION(-Wmissing-prototypes)
AX_CFLAGS_GCC_OPTION(-Wmissing-declarations)
AX_CFLAGS_GCC_OPTION(-Wbad-function-cast)
AX_CFLAGS_GCC_OPTION(-Wcast-qual)
AX_CFLAGS_GCC_OPTION(-Wcast-align)
AX_CFLAGS_GCC_OPTION(-Wnested-externs)
AX_CFLAGS_GCC_OPTION(-Wunused)
AC_SUBST(CFLAGS)

AC_CONFIG_FILES([
Makefile
prelude-correlator.conf

libmissing/Makefile

src/Makefile 
src/include/Makefile

plugins/Makefile
plugins/pcre/Makefile
plugins/pcre/ruleset/Makefile

])
AC_OUTPUT
